--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "type": "module",
   "scripts": {
     "build": "rimraf ./build && tsc -p tsconfig.build.json",
-    "run": "ts-node ./src/index.ts",
-    "run-bw": "ts-node ./src/index.ts true",
+    "convert": "ts-node ./src/index.ts",
+    "convert-bw": "ts-node ./src/index.ts true",
     "run:dev": "nodemon",
     "lint": "eslint . --ext .ts",
     "format": "eslint . --ext .ts --fix",
@@ -35,10 +35,6 @@
     "@types/node": "^18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1"
-  },
-  "engines": {
-    "npm": "please-use-yarn",
-    "yarn": "^1.22.17"
   },
   "lint-staged": {
     "src/**/*.{js,ts}": "eslint --cache --fix"
