--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "ase-utils": "^0.1.1",
     "color-convert": "^2.0.1",
-    "colorsys": "^1.0.22",
+    "color-to-name": "^1.1.0",
     "eslint": "^8.29.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
@@ -28,13 +28,13 @@
     "procreate-swatches": "^0.1.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@types/color-convert": "^2.0.0",
     "@types/node": "^18.11.11",
-    "@typescript-eslint/eslint-plugin": "^5.45.1",
-    "@typescript-eslint/parser": "^5.45.1"
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0"
   },
   "lint-staged": {
     "src/**/*.{js,ts}": "eslint --cache --fix"
