--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     // https://typestrong.org/ts-node/docs/imports/
     "esm": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/d.ts"],
   "exclude": ["node_modules"]
 }
