ci: fix github action build

--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -8,5 +8,9 @@
     "lib": ["ES2020"],
     "types": ["node", "electron"]
   },
-  "include": ["../electron/**/*.ts", "../src/core/**/*.ts"]
+  "include": [
+    "../electron/**/*.ts",
+    "../src/core/**/*.ts",
+    "../src/core/**/*.d.ts"
+  ]
 }
