--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,31 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        include:
+          - os: macos-latest
+            platform: mac
+            target: dmg
+            artifact_glob: "*.dmg"
+          - os: macos-latest
+            platform: mac
+            target: zip
+            artifact_glob: "*.zip"
+          - os: windows-latest
+            platform: win
+            target: nsis
+            artifact_glob: "*.exe"
+          - os: windows-latest
+            platform: win
+            target: zip
+            artifact_glob: "*.zip"
+          - os: ubuntu-latest
+            platform: linux
+            target: AppImage
+            artifact_glob: "*.AppImage"
+          - os: ubuntu-latest
+            platform: linux
+            target: deb
+            artifact_glob: "*.deb"
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -83,7 +107,7 @@ jobs:
         run: npm ci
 
       - name: Build desktop packages
-        run: npm run dist:desktop -- --publish never
+        run: npm run dist:desktop -- --publish never --${{ matrix.platform }} ${{ matrix.target }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REF: refs/tags/${{ needs.version.outputs.tag }}
@@ -94,7 +118,7 @@ jobs:
         with:
           tag_name: ${{ needs.version.outputs.tag }}
           name: Release ${{ needs.version.outputs.tag }}
-          files: release/**
+          files: release/${{ matrix.artifact_glob }}
           draft: false
           prerelease: false
           generate_release_notes: true
