--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "swatches-to-ase",
   "description": "Convert Procreate swatches file to Adobe ase format. Can be used for importing Procreate palettes into Photoshop or other programs like Illustrator or Affinity Designer.",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "main": "dist-electron/electron/main.js",
   "repository": "https://github.com/joanroig/swatches-to-ase.git",
   "author": "Joan Roig <joanroigsegura@gmail.com>",
   "license": "MIT",
+  "engines": {
+    "node": ">=22.12.0"
+  },
   "type": "module",
   "scripts": {
     "build": "rimraf ./build && tsc -p tsconfig.build.json",
@@ -21,33 +24,33 @@
     "format": "eslint . --ext .ts --fix",
     "format:staged": "lint-staged",
     "version:bump": "node scripts/bump-version.mjs",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "ase-utils": "^0.1.1",
-    "color-convert": "^2.0.1",
+    "color-convert": "^3.1.3",
     "color-namer": "^1.4.0",
-    "eslint": "^8.39.0",
-    "husky": "^8.0.3",
+    "eslint": "^9.39.2",
+    "husky": "^9.1.7",
     "jszip": "^3.10.1",
-    "lint-staged": "^13.2.2",
-    "nodemon": "^2.0.22",
+    "lint-staged": "^16.2.7",
+    "nodemon": "^3.1.11",
     "procreate-swatches": "^0.1.1",
-    "rimraf": "^5.0.0",
-    "typescript": "^5.0.4"
+    "rimraf": "^6.1.2",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@types/color-convert": "^2.0.0",
-    "@types/node": "^18.16.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
-    "concurrently": "^8.2.2",
-    "cross-env": "^7.0.3",
-    "electron": "^31.1.0",
-    "electron-builder": "^24.13.3",
-    "tsx": "^3.12.6",
-    "vite": "^5.4.21",
-    "wait-on": "^7.2.0"
+    "@types/color-convert": "^2.0.4",
+    "@types/node": "^25.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
+    "electron": "^40.1.0",
+    "electron-builder": "^26.4.0",
+    "tsx": "^4.21.0",
+    "vite": "^7.3.1",
+    "wait-on": "^9.0.3"
   },
   "lint-staged": {
     "src/**/*.{js,ts}": "eslint --cache --fix"
