--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "build:desktop": "npm run build:web && tsc -p electron/tsconfig.json",
     "dist:desktop": "npm run build:desktop && electron-builder",
     "run:dev": "nodemon",
-    "test": "node --test --import tsx",
-    "test:coverage": "node --test --experimental-test-coverage --import tsx",
+    "typecheck": "tsc -p tsconfig.json --noEmit && tsc -p electron/tsconfig.json --noEmit",
+    "test": "npm run typecheck && node --test --import tsx",
+    "test:coverage": "npm run typecheck && node --test --experimental-test-coverage --import tsx",
     "test:gui": "node scripts/ensure-playwright.mjs && playwright test",
     "lint": "eslint . --ext .ts",
     "format": "eslint . --ext .ts --fix",
